@@ -1,3 +1,9 @@
+2004-08-11  Alexander Larsson  <alexl@redhat.com>
+
+	* libgnome/gnome-i18n.c (gnome_i18n_get_language_list):
+	Upe bonobo_activation_i18n_get_language_list() to avoid
+	duplication of local alias tables.
+
 ==================== 2.7.2 ====================
 
 Mon Jul 19 23:18:19 2004  Jonathan Blandford  <jrb@gnome.org>
